--- a/reactions_video.html
+++ b/reactions_video.html
@@ -7,8 +7,8 @@
 
 	<style type="text/css">
 		#box {
-			width: 200px;
-			height: 200px;
+			width: 100px;
+			height: 100px;
 			background-color: red;
 			position: relative;
 			display: none;
@@ -43,10 +43,20 @@
 
 	// change location
 	function locationChange(){
-		var boxTop = Math.floor(Math.random() * 500);
-		var boxLeft = Math.floor(Math.random() * 700);
+		var boxTop = Math.floor(Math.random() * 400);
+		var boxLeft = Math.floor(Math.random() * 800);
 		box.style.top = boxTop + "px";
 		box.style.left = boxLeft + "px";
+	};
+
+	// change to circle
+	function circleChange(){
+		var circleNum = Math.floor(Math.random() * 5);
+		if (circleNum > 3){
+			box.style.borderRadius = 50 + "px";
+		} else {
+			box.style.borderRadius = 0;
+		}
 	};
 
 	function showbox(){
@@ -67,6 +77,7 @@
 
 		colorChange();
 		locationChange();
+		circleChange();
 
 		this.style.display = "none";
 		showbox();
